--- a/07.11.2022 homework.rc
+++ b/07.11.2022 homework.rc
@@ -82,13 +82,21 @@ BEGIN
     CONTROL         "Врач с красным дипломом",IDC_RADIO18,"Button",BS_AUTORADIOBUTTON,143,194,102,10
     LTEXT           "Какой номер у Молнии Макуина ?",IDC_STATIC,15,156,112,8
     LTEXT           "Тест на мультфильм Тачки",IDC_STATIC,35,12,132,8
-    GROUPBOX        "Какой цвет на картинке ?",IDC_STATIC,268,15,123,65
-    CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP,347,40,21,20
-    CONTROL         "Синий",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,29,36,10
-    CONTROL         "Желтый",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,53,42,10
-    CONTROL         "Зеленый",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,65,44,10
-    CONTROL         "Красный",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,41,44,10
-    PUSHBUTTON      "Finish test",IDC_BUTTON1,292,183,71,25
+    GROUPBOX        "Какой цвет на картинке ?",IDC_STATIC,268,17,123,65
+    CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP,347,42,21,20
+    CONTROL         "Синий",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,31,36,10
+    CONTROL         "Желтый",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,55,42,10
+    CONTROL         "Зеленый",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,67,44,10
+    CONTROL         "Красный",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,43,44,10
+    PUSHBUTTON      "Finish test",IDC_BUTTON1,292,182,71,25
+    GROUPBOX        "",IDC_STATIC,268,86,126,41
+    LTEXT           "Как зовут главного героя ?",IDC_STATIC,273,86,90,8
+    EDITTEXT        IDC_EDIT1,274,98,113,15,ES_AUTOHSCROLL
+    GROUPBOX        "",IDC_STATIC,268,130,126,41
+    LTEXT           "Как называется мультфильм ?",IDC_STATIC,273,130,100,8
+    EDITTEXT        IDC_EDIT2,274,142,113,15,ES_AUTOHSCROLL
+    PUSHBUTTON      "ОК",IDOK1,275,114,111,10
+    PUSHBUTTON      "ОК",IDOK2,275,158,111,10
 END
 
 
