--- a/07.11.2022 homework.rc
+++ b/07.11.2022 homework.rc
@@ -50,7 +50,7 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 412, 224
+IDD_DIALOG1 DIALOGEX 0, 0, 412, 256
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Тест на IQ"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -71,7 +71,7 @@ BEGIN
     CONTROL         "Эвакуатор",IDC_RADIO10,"Button",BS_AUTORADIOBUTTON | WS_GROUP,143,110,50,10
     CONTROL         "Судья",IDC_RADIO11,"Button",BS_AUTORADIOBUTTON,143,121,35,10
     CONTROL         "Шиномантажник",IDC_RADIO12,"Button",BS_AUTORADIOBUTTON,143,132,70,10
-    LTEXT           "Как зовут снию гоночную машину ?",IDC_STATIC,136,32,118,8
+    LTEXT           "Как зовут синию гоночную машину ?",IDC_STATIC,135,32,122,8
     GROUPBOX        "",IDC_STATIC,14,156,113,55
     CONTROL         "95",IDC_RADIO13,"Button",BS_AUTORADIOBUTTON | WS_GROUP,20,172,24,10
     CONTROL         "92",IDC_RADIO14,"Button",BS_AUTORADIOBUTTON,20,183,24,10
@@ -82,21 +82,25 @@ BEGIN
     CONTROL         "Врач с красным дипломом",IDC_RADIO18,"Button",BS_AUTORADIOBUTTON,143,194,102,10
     LTEXT           "Какой номер у Молнии Макуина ?",IDC_STATIC,15,156,112,8
     LTEXT           "Тест на мультфильм Тачки",IDC_STATIC,35,12,132,8
-    GROUPBOX        "Какой цвет на картинке ?",IDC_STATIC,268,17,123,65
-    CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP,347,42,21,20
-    CONTROL         "Синий",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,31,36,10
-    CONTROL         "Желтый",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,55,42,10
-    CONTROL         "Зеленый",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,67,44,10
-    CONTROL         "Красный",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,43,44,10
-    PUSHBUTTON      "Finish test",IDC_BUTTON1,292,182,71,25
-    GROUPBOX        "",IDC_STATIC,268,86,126,41
-    LTEXT           "Как зовут главного героя ?",IDC_STATIC,273,86,90,8
-    EDITTEXT        IDC_EDIT1,274,98,113,15,ES_AUTOHSCROLL
-    GROUPBOX        "",IDC_STATIC,268,130,126,41
-    LTEXT           "Как называется мультфильм ?",IDC_STATIC,273,130,100,8
-    EDITTEXT        IDC_EDIT2,274,142,113,15,ES_AUTOHSCROLL
-    PUSHBUTTON      "ОК",IDOK1,275,114,111,10
-    PUSHBUTTON      "ОК",IDOK2,275,158,111,10
+    GROUPBOX        "Какой цвет на картинке ?",IDC_STATIC,268,57,123,65
+    CONTROL         IDB_BITMAP1,IDC_STATIC,"Static",SS_BITMAP,347,82,21,20
+    CONTROL         "Синий",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,71,36,10
+    CONTROL         "Желтый",IDC_CHECK2,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,95,42,10
+    CONTROL         "Зеленый",IDC_CHECK3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,107,44,10
+    CONTROL         "Красный",IDC_CHECK4,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,274,83,44,10
+    PUSHBUTTON      "Finish test",IDC_BUTTON1,294,217,71,25
+    GROUPBOX        "",IDC_STATIC,268,126,126,41
+    LTEXT           "Как зовут главного героя ?",IDC_STATIC,273,126,90,8
+    EDITTEXT        IDC_EDIT1,274,138,113,15,ES_AUTOHSCROLL
+    GROUPBOX        "",IDC_STATIC,268,170,126,41
+    LTEXT           "Как называется мультфильм ?",IDC_STATIC,273,170,100,8
+    EDITTEXT        IDC_EDIT2,274,182,113,15,ES_AUTOHSCROLL
+    PUSHBUTTON      "ОК",IDOK1,275,154,111,10
+    PUSHBUTTON      "ОК",IDOK2,275,198,111,10
+    CONTROL         "",IDC_PROGRESS1,"msctls_progress32",PBS_SMOOTH | WS_BORDER,16,225,242,11
+    EDITTEXT        IDC_EDIT3,279,26,97,14,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "",IDC_SPIN2,"msctls_updown32",UDS_SETBUDDYINT | UDS_AUTOBUDDY | UDS_ARROWKEYS,375,26,12,14
+    LTEXT           "Ваш возраст",IDC_STATIC,309,14,41,8
 END
 
 
@@ -113,7 +117,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 405
         TOPMARGIN, 7
-        BOTTOMMARGIN, 217
+        BOTTOMMARGIN, 249
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -126,7 +130,53 @@ END
 
 IDD_DIALOG1 AFX_DIALOG_LAYOUT
 BEGIN
-    0
+    0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    100, 0, 0, 0,
+    0, 0, 0, 0
 END
 
 
